@@ -1,5 +1,12 @@
 2022-03-12  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* emacs/poke.el (poke-set-omode): New function.
+	(poke-set-pretty-print): Likewise.
+	(poke-vu-next-line): Improve.
+	(poke-vu-mode): Add a header line with a ruler.
+
+2022-03-12  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* emacs/poke.el (poke-styling-faces): Fix faces names.
 	(poke-out-filter): Move proces marker whenever necessary.
 	(poke-open-file): s/E_generic_io/E-io.
